removed h3 tag, added colors to h1 and p tags

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    body{
+        font-family: sans-serif;
+    }
+    h1{
+        color: pink;
+    }
+    p{
+        color: purple;
+    }
+</style>
 <body>
     <h1>hello world</h1>
-    <h3>hello world</h3>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio repudiandae, ea accusamus magni earum et debitis suscipit voluptate cupiditate mollitia natus? Accusantium quaerat, neque dolorem aliquam sapiente laborum dignissimos. Fuga.</p>
 </body>
 </html>
